[package]
name = "lumol"
version = "0.0.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "README.md"
license = "BSD-3-Clause"

[workspace]
members = [
	"lumol-core",
	"lumol-sim",
	"lumol-input",
    "tutorials/potential",
]

[[bin]]
name = "lumol"
doc = false
test = false
doctest = false
bench = false

[lib]
test = false
doctest = false
bench = false

[dependencies]
lumol-core = {path = "lumol-core"}
lumol-sim = {path = "lumol-sim"}
lumol-input = {path = "lumol-input"}
log = "0.4"
clap = "2"
chrono = "0.4"
backtrace = "0.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.5"
env_logger = "0.5"

[[bench]]
name = "water"
harness = false

[[bench]]
name = "nacl"
harness = false

[[bench]]
name = "argon"
harness = false

[[bench]]
name = "propane"
harness = false
