[package]
name = "lumol-core"
version = "0.0.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol.org/"
repository = "https://github.com/lumol-org/lumol"
readme = "../README.md"
license = "BSD-3-Clause"
edition = "2021"

[lib]
bench = false

[dependencies]
bitflags = "1"
chemfiles = "0.10"
lazy_static = "1"
log-once = "0.4"
ndarray = "0.14"
num-traits = "0.2"
rayon = "1"
soa_derive = "0.10"
special = "0.8"
thread_local = "1"

[dependencies.log]
version = "0.4"
features = ["std"]

[dev-dependencies]
tempfile = "3"
approx = "0.4"
