[package]
name = "lumol-sim"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol.org/"
repository = "https://github.com/lumol-org/lumol"
readme = "../README.md"
license = "BSD-3-Clause"

[dependencies]
lumol-core = {path = "../lumol-core"}
rand = "0.5"
log = "0.4"
log-once = "0.2"
caldyn = "0.4"
soa_derive = "0.7"

[dev-dependencies]
tempfile = "3"
approx = "0.3"
