[package]
name = "lumol-sim"
version = "0.0.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol.org/"
repository = "https://github.com/lumol-org/lumol"
readme = "../README.md"
license = "BSD-3-Clause"

[lib]
bench = false

[dependencies]
lumol-core = {path = "../lumol-core"}
rand = "0.6"
rand_xorshift = "0.1"
log = "0.4"
log-once = "0.3"
caldyn = "0.4"
soa_derive = "0.8"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3"
approx = "0.3"
