[package]
name = "lumol-core"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "../../README.md"
license = "BSD-3-Clause"

[lib]
name = "lumol"

[dependencies]
chemfiles = "0.7"
rand = "0.3"
log = "0.3"
log-once = "0.1"
special = "0.7"
bitflags = "1"
ndarray = "0.10"
ndarray-parallel = "0.5"
lazy_static = "0.2"
num-traits = "0.1"
rayon = "0.8"
thread_local = "0.3"
caldyn = "0.4"
itertools = "0.6"

[dev-dependencies]
tempfile = "2.1"
approx = "0.1.1"
