[package]
name = "lumol-core"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "../../README.md"
license = "BSD-3-Clause"

[dependencies]
chemfiles = "0.8"
rand = "0.5"
log = "0.4"
log-once = "0.2"
special = "0.7"
bitflags = "1"
ndarray = "0.11"
ndarray-parallel = "0.8"
lazy_static = "1"
num-traits = "0.2"
rayon = "1"
thread_local = "0.3"
caldyn = "0.4"
itertools = "0.7"
soa_derive = "0.7"

[dev-dependencies]
lumol = {path = "../.."}
tempfile = "3"
approx = "0.3"
env_logger = "*"
