[package]
name = "lumol-input"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "../../README.md"
license = "BSD-3-Clause"

[dependencies]
lumol-core = {path = "../core"}
toml = "0.2"
log = "0.3"
chemfiles = "0.7"

[dev-dependencies]
walkdir = "1"
rustc-test = "0.1"

[lib]
test = false

[[test]]
name = "input"
harness = false
