[package]
name = "lumol-input"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "../../README.md"
license = "BSD-3-Clause"

[dependencies]
lumol-core = {path = "../core"}
toml = "0.3"
log = "0.3"
chemfiles = "0.7"

[dependencies.log4rs]
version = "0.6"
# log4rs has a enormous ammount of features pulling a lot of crates. As we don't
# need most of them, we selectively enable the ones we want.
default-features = false
features = ["console_appender", "file_appender", "threshold_filter"]

[dev-dependencies]
walkdir = "1"
rustc-test = "0.1"
env_logger = "0.4"

[lib]
test = false

[[test]]
name = "input"
harness = false
