[package]
name = "lumol-macros"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
documentation = "https://lumol-org.github.io/lumol"
repository = "https://github.com/lumol-org/lumol"
readme = "../../README.md"
license = "BSD"

[dependencies]
syn = "0.10"
quote = "0.3"

[lib]
proc-macro = true
